# esphome-external-components

./: .env.example  .gitignore  CMAKE_SETUP.md  CMakeLists.txt  README.md  compile_commands.json  platformio_install_deps_locally.py  prepare_esphome.sh  requirements.txt  test_intellisense.cpp
-/: pyvenv.cfg
components/climate_ir_woleix/: climate_ir_woleix.cpp  climate_ir_woleix.h
config/: woleix_climate.yaml
device/: woleix_climate.yaml
esphome/components/climate_ir_woleix/: __init__.py  climate.py  climate_ir_woleix.cpp  climate_ir_woleix.h  state_mapper.cpp  state_mapper.h  woleix_ac_state_machine.cpp  woleix_ac_state_machine.h  woleix_comm.cpp  woleix_comm.h  woleix_command.h  woleix_constants.h  woleix_management.h  woleix_protocol_handler.cpp  woleix_protocol_handler.h  woleix_state_machine.cpp  woleix_state_machine.h  woleix_state_manager.cpp  woleix_state_manager.h  woleix_state_mapper.cpp  woleix_state_mapper.h  woleix_status.h
tests/: .gitignore  CMakeLists.txt  README.md  climate_ir_woleix_test.cpp
tests/integration/: .gitignore  Dockerfile  README.md  docker-compose.yml  platformio.ini  requirements.txt  run_tests.py  run_tests.sh  test_runner.py
tests/integration/scripts/: test_runner.py  wait_for_esphome.sh
tests/integration/smoke_tests/: requirements.txt  test_runner.py
tests/integration/test_configs/: basic.yaml  climate_test.yaml  github_test.yaml  woleix_test_basic.yaml  woleix_test_full.yaml  woleix_test_with_dht.yaml  woleix_test_with_reset_button.yaml
tests/mocks/esphome/components/climate_ir/: climate_ir.h
tests/mocks/esphome/components/sensor/: sensor.h
tests/mocks/esphome/core/: log.h
tests/unit/: .gitignore  CMakeLists.txt  README.md  climate_ir_woleix_test.cpp  generate_coverage.sh  mock_queue.h  mock_scheduler.h  run_tests.sh  state_mapper_test.cpp  test_compile  woleix_ac_state_machine_test.cpp  woleix_comm_test.cpp  woleix_command_queue_test.cpp  woleix_commands_test.cpp  woleix_protocol_handler_test.cpp  woleix_state_machine_test.cpp  woleix_state_manager_test.cpp  woleix_state_mapper_test.cpp  woleix_status_test.cpp
tests/unit/mocks/esphome/components/binary_sensor/: binary_sensor.h
tests/unit/mocks/esphome/components/climate/: climate.h  climate_mode.h
tests/unit/mocks/esphome/components/climate_ir/: climate_ir.h
tests/unit/mocks/esphome/components/remote_base/: nec_protocol.h  pronto_protocol.h  remote_base.h
tests/unit/mocks/esphome/components/sensor/: sensor.h
tests/unit/mocks/esphome/core/: component.h  hal.h  log.h  optional.h
